--- a/app/views/outfits/edit.html.haml
+++ b/app/views/outfits/edit.html.haml
@@ -14,9 +14,8 @@
     Gender/Emotions:
     %ul
   #save-outfit-wrapper
-    %button#save-outfit
-      %span#save-outfit-signed-in Save outfit
-      %span Log in to save outfit
+    %button#save-outfit Save outfit
+    %button#save-outfit-not-signed-in Log in to save outfit
 #preview
   #preview-swf
     #preview-swf-container
