save current outfit, save copy

--- a/app/stylesheets/outfits/_edit.sass
+++ b/app/stylesheets/outfits/_edit.sass
@@ -422,6 +422,11 @@ body.outfits-edit
       display: block
     #save-outfit
       display: inline-block
+    #save-outfit-wrapper.active-outfit
+      #save-outfit
+        display: none
+      #save-current-outfit, #save-outfit-copy
+        display: inline-block
   
   &.user-not-signed-in
     #save-outfit-not-signed-in
