--- a/app/views/outfits/edit.html.haml
+++ b/app/views/outfits/edit.html.haml
@@ -16,6 +16,8 @@
   #save-outfit-wrapper
     %button#save-outfit Save outfit
     %button#save-outfit-not-signed-in Log in to save outfit
+    %button#save-current-outfit Save &quot;<span>current outfit</span>&quot;
+    %button#save-outfit-copy Save a copy
 #preview
   #preview-swf
     #preview-swf-container
