show outfit page

--- a/app/stylesheets/_layout.sass
+++ b/app/stylesheets/_layout.sass
@@ -67,7 +67,7 @@ $container_width: 800px
 
 #container
   margin: 1em auto
-  padding-top: 3em
+  padding-top: $container-top-padding
   position: relative
   width: $container_width
 
