--- a/app/stylesheets/screen.sass
+++ b/app/stylesheets/screen.sass
@@ -12,6 +12,7 @@
 @import items/show
 @import outfits/edit
 @import outfits/new
+@import outfits/show
 @import pets/bulk
 @import static/terms
 @import users/top_contributors
