--- a/public/stylesheets/compiled/screen.css
+++ b/public/stylesheets/compiled/screen.css
@@ -1879,6 +1879,41 @@ body.outfits-new #tell-the-world img {
   width: 16px;
 }
 
+/* line 2, ../../../app/stylesheets/outfits/_show.sass */
+body.outfits-show #title {
+  float: left;
+}
+/* line 5, ../../../app/stylesheets/outfits/_show.sass */
+body.outfits-show #outfit-wardrobe-link {
+  float: left;
+  font-size: 85%;
+  margin-left: 2em;
+  margin-top: 0.75em;
+}
+/* line 12, ../../../app/stylesheets/outfits/_show.sass */
+body.outfits-show #outfit-user {
+  float: right;
+  margin-top: 1em;
+}
+/* line 16, ../../../app/stylesheets/outfits/_show.sass */
+body.outfits-show #preview-wrapper {
+  clear: both;
+  height: 400px;
+  margin: 0 auto 1em;
+  position: relative;
+  width: 400px;
+}
+/* line 23, ../../../app/stylesheets/outfits/_show.sass */
+body.outfits-show #preview-wrapper #preview-swf {
+  left: 0;
+  position: absolute;
+  top: 0;
+}
+/* line 28, ../../../app/stylesheets/outfits/_show.sass */
+body.outfits-show #outfit-items {
+  text-align: center;
+}
+
 /* line 1, ../../../app/stylesheets/pets/_bulk.sass */
 body.pets-bulk {
   text-align: center;
