include announcement, analytics.js file to overwrite when necessary

--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -7,13 +7,14 @@
         &mdash;
         = yield :title
     = stylesheet_link_tag "compiled/screen"
-    = javascript_include_tag "http://#{RemoteImpressHost}/assets/js/analytics.js"
     = csrf_meta_tag
     = signed_in_meta_tag
   %body{:class => body_class}
+    = javascript_include_tag "analytics"
     #container
       - if content_for? :title
         %h1#title= yield :title
+      = render 'static/announcement.html'
       = yield :before_flashes
       = flashes
 
