use compass image helpers for cachebuster strings

--- a/app/stylesheets/_layout.sass
+++ b/app/stylesheets/_layout.sass
@@ -207,19 +207,19 @@ dd
 /* A font by Jos Buivenga (exljbris) -> www.exljbris.nl
 @font-face
   font-family: Delicious
-  src: url("/fonts/Delicious-Roman.otf")
+  src: local("Delicious"), font-url("Delicious-Roman.otf")
 
 
 @font-face
   font-family: Delicious
   font-weight: bold
-  src: url("/fonts/Delicious-Bold.otf")
+  src: local("Delicious"), font-url("Delicious-Bold.otf")
 
 
 @font-face
   font-family: Delicious
   font-style: italic
-  src: url("/fonts/Delicious-Italic.otf")
+  src: local("Delicious"), font-url("Delicious-Italic.otf")
 
 
 @font-face
