remove hard-coded references to impress.openneo.net

--- a/app/views/items/show.html.haml
+++ b/app/views/items/show.html.haml
@@ -22,7 +22,7 @@
 
 #item-preview-header
   %h3 Preview
-  %a#customize-more.button{:href => 'http://impress.openneo.net/'} Customize more
+  %a#customize-more.button{:href => '/'} Customize more
 
 #item-preview
   #item-preview-species= standard_species_images(@item.supported_species)
