fix wardrobe overlaps: search+swf, search+footer

--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -49,16 +49,16 @@
           %li
             %a{:href => "http://forum.openneo.net/", :target => "_blank"} Forum
           %li
-            %a{:href => "http://github.com/matchu/openneo-impress"} The Source Code
+            %a{:href => "http://github.com/matchu/openneo-impress-rails"} Source Code
           %li
             %a{:href => terms_path} Terms of Use
         %div
           Contact:
           %ul
             %li
-              %a{:href => "http://openneo.uservoice.com/forums/40720-dress-to-impress"} Feedback
+              %a{:href => "http://openneo.uservoice.com/forums/40720-dress-to-impress"} Suggestions
             %li
-              %a{:href => "mailto:webmaster@openneo.net"} Questions, comments, bug reports
+              %a{:href => "mailto:webmaster@openneo.net"} Questions, comments, bugs
         %p
           Images &copy; 2000-2010 Neopets, Inc. All Rights Reserved.
           Used With Permission
